# cuda-ops

./: CMakeLists.txt  README.md
demo/: Makefile  Question.md  README.md  report.ncu-rep  sgemm  sgemm.cu  test.cu
demo/gelu/: gelu.cu
demo/reduce/: Makefile  README.md  reduce  reduce.cu
demo/sgemm/: Makefile  report.ncu-rep  sgemm  sgemm.cu
demo/softmax/: Makefile  README.md  gpt  gpt.cu  softmax.cu  test  test.cu
docs/: sgemm.md
src/: wrapper.cpp
src/gelu/: Makefile  Makfile  gelu.cuh  test  test.cu
src/histogram/: CMakeLists.txt  histogram.cu  histogram.h
src/reduce/: CMakeLists.txt  reduce.cu  reduce.h
src/scan/: scan.cuh
src/sgemm/: CMakeLists.txt  sgemm.cu  sgemm.cuh  sgemm.h
test/: Makefile  sgemm  sgemm.cu  test_histogram.cpp  test_reduce.cpp  test_sgemm.cpp  test_sgemm_reg  test_sgemm_reg.cu  test_sgemm_sram  test_sgemm_sram.cu  test_sram_tile  test_sram_tile.cu
